--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@codelytv/vite-react_best_practices-template",
-  "author": "codelytv",
+  "name": "",
+  "author": "saracrz",
   "license": "MIT",
   "private": true,
   "version": "1.0.0",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.0"
   },
   "scripts": {
     "start": "vite --port 3000 --open",
@@ -14,8 +15,8 @@
     "test": "jest --watch --config=jest.config.js",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "lint": "eslint --ignore-path .gitignore . && stylelint **/*.scss",
-    "lint:fix": "eslint --fix --ignore-path .gitignore . && stylelint --fix **/*.scss",
+    "lint": "eslint --ignore-path .gitignore .",
+    "lint:fix": "eslint --fix --ignore-path .gitignore .",
     "preview": "vite preview"
   },
   "eslintConfig": {
@@ -44,7 +45,7 @@
     "overrides": [
       {
         "files": [
-          "**/tests/e2e/**/*.spec.ts"
+          "**/tests/e2e/**/*.cy.ts"
         ],
         "rules": {
           "testing-library/await-async-query": 0,
@@ -87,7 +88,6 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-transform-stub": "^2.0.0",
-    "sass": "^1.60.0",
     "stylelint": "^14.16.1",
     "stylelint-config-rational-order": "^0.0.4",
     "stylelint-config-standard-scss": "^3.0.0",
